Finished day 15 of 2015 in Rust

--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -29,23 +29,25 @@
         "day 11",
         "day 12",
         "day 13",
-        "day 14"
+        "day 14",
+        "day 15"
       ],
       "y": [
-        0.027512,
-        0.266176,
-        0.0275543,
-        0.0745,
-        0.110848,
-        1.2682515,
-        0.222728,
-        0.0599307,
-        0.256709,
-        0.136069,
-        0.084817,
-        0.427476,
-        0.25586,
-        0.095603
+        0.06739,
+        0.338443,
+        0.084546,
+        1.3097,
+        0.217068,
+        1.332666,
+        0.44515,
+        0.109236,
+        0.174311,
+        0.43727,
+        0.32587,
+        0.491891,
+        0.89574,
+        0.106157,
+        13.72124
       ],
       "name": "Initialization",
       "marker": {
@@ -54,20 +56,21 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.052008201430158975,
-          0.09488200779916077,
-          0.028024554974343443,
-          0.0068,
-          0.04155369653833456,
-          0.5231981132398613,
-          0.04730593108691552,
-          0.05425215928891679,
-          0.22870454000522117,
-          0.058058280537749425,
-          0.04582432553786257,
-          0.11146569797027255,
-          0.027090891458200483,
-          0.36903403270023705
+          0.4058424498496923,
+          0.399457663652857,
+          0.5149162565738242,
+          1.2191,
+          1.0936107045818448,
+          0.752307007307526,
+          0.6886119723763159,
+          0.6230541007841953,
+          0.10677001816521296,
+          0.7972503986201575,
+          0.7722589566330714,
+          0.7935779863498015,
+          1.9497056932778343,
+          0.6584588660280906,
+          1.2857733950428434
         ]
       }
     },
@@ -87,23 +90,25 @@
         "day 11",
         "day 12",
         "day 13",
-        "day 14"
+        "day 14",
+        "day 15"
       ],
       "y": [
-        0.0097338,
-        0.0011539,
-        0.3403,
-        763.0406,
-        0.2563674,
-        30.852436,
-        22.484196,
-        0.0039921,
-        95.8039,
-        1.940398,
-        15.691806,
-        1.643894,
-        144.0564,
-        0.00006
+        0.010684,
+        0.001341,
+        0.330645,
+        707.7104,
+        0.22604,
+        26.40959,
+        20.5055,
+        0.003727,
+        86.80463,
+        1.66994,
+        14.79388,
+        1.534094,
+        132.41641,
+        0.00004,
+        76.99833
       ],
       "name": "Part 1",
       "marker": {
@@ -112,20 +117,21 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.00580831624139045,
-          0.0004851028653801162,
-          0.10333569005914656,
-          1.6122,
-          0.07762199828167264,
-          3.3742869944672798,
-          2.570000173051359,
-          0.004073863963119032,
-          6.289349920737039,
-          0.5669361052146878,
-          1.7389465151533559,
-          0.36293378867776976,
-          7.437729558064073,
-          0.000058309518948453004
+          0.003396136628582543,
+          0.0012093051724027333,
+          0.08288394340884125,
+          1.4166,
+          0.008902684988249332,
+          0.7380609739716631,
+          0.16755759009964305,
+          0.0026989203396914113,
+          4.02410894725416,
+          0.4371005907111085,
+          0.3039682772922201,
+          0.1331653091612078,
+          7.383661052547036,
+          0.00006,
+          5.945996205439421
         ]
       }
     },
@@ -145,23 +151,25 @@
         "day 11",
         "day 12",
         "day 13",
-        "day 14"
+        "day 14",
+        "day 15"
       ],
       "y": [
-        0.0313599,
-        0.0010859,
-        0.3451349,
-        21163.357,
-        2.0378695,
-        4.7003984,
-        22.200777,
-        0.0061296,
-        0.113059,
-        28.535177,
-        40.0544,
-        1.463219,
-        1621.7358,
-        5.911019
+        0.025855,
+        0.001031,
+        0.334007,
+        19752.648,
+        1.810925,
+        4.020123,
+        20.48078,
+        0.005394,
+        0.104444,
+        24.13221,
+        37.56032,
+        1.333621,
+        1477.7743,
+        5.452075,
+        77.82172
       ],
       "name": "Part 2",
       "marker": {
@@ -170,20 +178,21 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.06562679698103521,
-          0.00047490124236518387,
-          0.09087723803015796,
-          38.88405,
-          0.5110603721515101,
-          1.409678157895534,
-          2.108191731393516,
-          0.0055176828324940645,
-          0.022239123611329653,
-          4.624066500334526,
-          3.4654975130706682,
-          0.395070680940765,
-          10.939411559786935,
-          0.7026557899419879
+          0.01042554914620808,
+          0.0002536513354981598,
+          0.03782120901028946,
+          6.93995,
+          0.08583566668349468,
+          0.1392773699170115,
+          0.12996976417613446,
+          0.0007384876437693448,
+          0.01682378268998982,
+          1.13561837995869,
+          0.47000545911723196,
+          0.08850064326884853,
+          16.83755190146121,
+          0.1455121688210302,
+          1.4365398244653715
         ]
       }
     }
