Finished day 16 of 2015 in Rust

--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -30,24 +30,26 @@
         "day 12",
         "day 13",
         "day 14",
-        "day 15"
+        "day 15",
+        "day 16"
       ],
       "y": [
-        0.06739,
-        0.338443,
-        0.084546,
-        1.3097,
-        0.217068,
-        1.332666,
-        0.44515,
-        0.109236,
-        0.174311,
-        0.43727,
-        0.32587,
-        0.491891,
-        0.89574,
-        0.106157,
-        13.72124
+        0.020743,
+        0.353109,
+        0.034805,
+        0.11925,
+        0.137118,
+        1.507674,
+        0.27198,
+        0.045422,
+        0.187864,
+        0.14648,
+        0.10444,
+        0.464011,
+        0.91731,
+        0.068965,
+        14.112211,
+        1.25401
       ],
       "name": "Initialization",
       "marker": {
@@ -56,21 +58,22 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.4058424498496923,
-          0.399457663652857,
-          0.5149162565738242,
-          1.2191,
-          1.0936107045818448,
-          0.752307007307526,
-          0.6886119723763159,
-          0.6230541007841953,
-          0.10677001816521296,
-          0.7972503986201575,
-          0.7722589566330714,
-          0.7935779863498015,
-          1.9497056932778343,
-          0.6584588660280906,
-          1.2857733950428434
+          0.01441925278923984,
+          0.1159852060350801,
+          0.030984113267931355,
+          0.01005,
+          0.05452284361623105,
+          0.3059481905878832,
+          0.08852783517063997,
+          0.01167824113469149,
+          0.03177121502240668,
+          0.04407420560826933,
+          0.04183522917350878,
+          0.15370053929313301,
+          1.3488898631467285,
+          0.0761834750782609,
+          2.0701140519253998,
+          0.5670035397596738
         ]
       }
     },
@@ -91,24 +94,26 @@
         "day 12",
         "day 13",
         "day 14",
-        "day 15"
+        "day 15",
+        "day 16"
       ],
       "y": [
-        0.010684,
-        0.001341,
-        0.330645,
-        707.7104,
-        0.22604,
-        26.40959,
-        20.5055,
-        0.003727,
-        86.80463,
-        1.66994,
-        14.79388,
-        1.534094,
-        132.41641,
-        0.00004,
-        76.99833
+        0.010629,
+        0.001685,
+        0.345105,
+        785.7717,
+        0.269869,
+        31.0561,
+        23.49882,
+        0.003967,
+        94.87951,
+        2.0716,
+        16.41775,
+        1.662804,
+        143.27441,
+        0.00005,
+        76.692444,
+        0.062138
       ],
       "name": "Part 1",
       "marker": {
@@ -117,21 +122,22 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.003396136628582543,
-          0.0012093051724027333,
-          0.08288394340884125,
-          1.4166,
-          0.008902684988249332,
-          0.7380609739716631,
-          0.16755759009964305,
-          0.0026989203396914113,
-          4.02410894725416,
-          0.4371005907111085,
-          0.3039682772922201,
-          0.1331653091612078,
-          7.383661052547036,
-          0.00006,
-          5.945996205439421
+          0.002406503480155392,
+          0.001771178985873534,
+          0.07197950593745417,
+          2.84275,
+          0.07507953875058097,
+          3.373742140694659,
+          2.1506648682674854,
+          0.001669793699832411,
+          5.019553127438641,
+          0.9072421837635196,
+          2.4166863078397247,
+          0.4685007619887083,
+          16.90651420652998,
+          0.00005196152422706632,
+          4.498055911974749,
+          0.027685081831195717
         ]
       }
     },
@@ -152,24 +158,26 @@
         "day 12",
         "day 13",
         "day 14",
-        "day 15"
+        "day 15",
+        "day 16"
       ],
       "y": [
-        0.025855,
-        0.001031,
-        0.334007,
-        19752.648,
-        1.810925,
-        4.020123,
-        20.48078,
-        0.005394,
-        0.104444,
-        24.13221,
-        37.56032,
-        1.333621,
-        1477.7743,
-        5.452075,
-        77.82172
+        0.024246,
+        0.001229,
+        0.3509,
+        21784.344,
+        2.105618,
+        4.423023,
+        22.72916,
+        0.004877,
+        0.111473,
+        27.60213,
+        42.24581,
+        1.449864,
+        1677.8689,
+        6.067983,
+        78.18428,
+        0.068601
       ],
       "name": "Part 2",
       "marker": {
@@ -178,21 +186,22 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.01042554914620808,
-          0.0002536513354981598,
-          0.03782120901028946,
-          6.93995,
-          0.08583566668349468,
-          0.1392773699170115,
-          0.12996976417613446,
-          0.0007384876437693448,
-          0.01682378268998982,
-          1.13561837995869,
-          0.47000545911723196,
-          0.08850064326884853,
-          16.83755190146121,
-          0.1455121688210302,
-          1.4365398244653715
+          0.005036554774843615,
+          0.00031378177129973665,
+          0.06687575943494024,
+          7.45565,
+          0.5066953231242611,
+          0.6424440456343251,
+          1.9105985361660884,
+          0.0005644209422053723,
+          0.022087968919753603,
+          3.0716660684553587,
+          9.379034741107425,
+          0.39940463130013926,
+          143.34051500661664,
+          1.8842607847670696,
+          3.997923451239526,
+          0.0744763042786094
         ]
       }
     }
