Finished day 17 of 2015 in Rust

--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -31,25 +31,27 @@
         "day 13",
         "day 14",
         "day 15",
-        "day 16"
+        "day 16",
+        "day 17"
       ],
       "y": [
-        0.020743,
-        0.353109,
-        0.034805,
-        0.11925,
-        0.137118,
-        1.507674,
-        0.27198,
-        0.045422,
-        0.187864,
-        0.14648,
-        0.10444,
-        0.464011,
-        0.91731,
-        0.068965,
-        14.112211,
-        1.25401
+        0.045832,
+        0.366697,
+        0.060249,
+        0.12935,
+        0.167537,
+        1.435391,
+        0.30084,
+        0.05103,
+        0.18867,
+        0.19947,
+        0.08854,
+        0.467594,
+        0.25256,
+        0.06199,
+        14.090315,
+        1.013101,
+        0.09442
       ],
       "name": "Initialization",
       "marker": {
@@ -58,22 +60,23 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.01441925278923984,
-          0.1159852060350801,
-          0.030984113267931355,
-          0.01005,
-          0.05452284361623105,
-          0.3059481905878832,
-          0.08852783517063997,
-          0.01167824113469149,
-          0.03177121502240668,
-          0.04407420560826933,
-          0.04183522917350878,
-          0.15370053929313301,
-          1.3488898631467285,
-          0.0761834750782609,
-          2.0701140519253998,
-          0.5670035397596738
+          0.03275148509609909,
+          0.1465914932422752,
+          0.06462833820391811,
+          0.00255,
+          0.15168399892869355,
+          0.17193334237139732,
+          0.10625083717317244,
+          0.02113035021006514,
+          0.029465917599830485,
+          0.1223771633108073,
+          0.0534485210272464,
+          0.16756470918424338,
+          0.0166412860079983,
+          0.06987523237886226,
+          2.0168271854264064,
+          0.38214577074592865,
+          0.027064101684704037
         ]
       }
     },
@@ -95,25 +98,27 @@
         "day 13",
         "day 14",
         "day 15",
-        "day 16"
+        "day 16",
+        "day 17"
       ],
       "y": [
-        0.010629,
-        0.001685,
-        0.345105,
-        785.7717,
-        0.269869,
-        31.0561,
-        23.49882,
-        0.003967,
-        94.87951,
-        2.0716,
-        16.41775,
-        1.662804,
-        143.27441,
-        0.00005,
-        76.692444,
-        0.062138
+        0.017688,
+        0.001546,
+        0.44645,
+        756.00604,
+        0.270472,
+        29.35788,
+        22.47494,
+        0.004241,
+        93.819084,
+        1.69002,
+        17.07079,
+        1.686175,
+        135.33989,
+        0.000055,
+        78.13759,
+        0.060567,
+        112.16948
       ],
       "name": "Part 1",
       "marker": {
@@ -122,22 +127,23 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.002406503480155392,
-          0.001771178985873534,
-          0.07197950593745417,
-          2.84275,
-          0.07507953875058097,
-          3.373742140694659,
-          2.1506648682674854,
-          0.001669793699832411,
-          5.019553127438641,
-          0.9072421837635196,
-          2.4166863078397247,
-          0.4685007619887083,
-          16.90651420652998,
-          0.00005196152422706632,
-          4.498055911974749,
-          0.027685081831195717
+          0.004610667630614898,
+          0.0011635652108927948,
+          0.16966825071297223,
+          6.79145,
+          0.06575673817944444,
+          3.0489557099767786,
+          3.174665430624147,
+          0.0027752151267964723,
+          5.012046514236974,
+          0.37399156086735436,
+          4.325505747181479,
+          0.4528728179908792,
+          4.045939421061566,
+          0.00007794228634059949,
+          4.266352124006996,
+          0.03035634383452656,
+          3.9457509670023527
         ]
       }
     },
@@ -159,25 +165,27 @@
         "day 13",
         "day 14",
         "day 15",
-        "day 16"
+        "day 16",
+        "day 17"
       ],
       "y": [
-        0.024246,
-        0.001229,
-        0.3509,
-        21784.344,
-        2.105618,
-        4.423023,
-        22.72916,
-        0.004877,
-        0.111473,
-        27.60213,
-        42.24581,
-        1.449864,
-        1677.8689,
-        6.067983,
-        78.18428,
-        0.068601
+        0.034819,
+        0.001313,
+        0.432914,
+        21121.254,
+        2.235519,
+        4.073153,
+        22.60001,
+        0.005411,
+        0.109692,
+        26.05371,
+        38.88754,
+        1.48716,
+        1533.9316,
+        5.733501,
+        77.09692,
+        0.056735,
+        0.10366
       ],
       "name": "Part 2",
       "marker": {
@@ -186,22 +194,23 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.005036554774843615,
-          0.00031378177129973665,
-          0.06687575943494024,
-          7.45565,
-          0.5066953231242611,
-          0.6424440456343251,
-          1.9105985361660884,
-          0.0005644209422053723,
-          0.022087968919753603,
-          3.0716660684553587,
-          9.379034741107425,
-          0.39940463130013926,
-          143.34051500661664,
-          1.8842607847670696,
-          3.997923451239526,
-          0.0744763042786094
+          0.012048499450139014,
+          0.0006900224634024607,
+          0.12508032940474664,
+          17.94355,
+          0.5597195334620717,
+          0.520246251203216,
+          3.7415953962046724,
+          0.0012533072249053686,
+          0.020747335636172627,
+          4.256587001683391,
+          3.902901680339898,
+          0.39260897111502685,
+          20.451772092559608,
+          0.6291668981271988,
+          4.008231082951554,
+          0.01959507272249838,
+          0.012232268800185842
         ]
       }
     }
