Finished day 18 of 2015 in Rust

--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -32,26 +32,28 @@
         "day 14",
         "day 15",
         "day 16",
-        "day 17"
+        "day 17",
+        "day 18"
       ],
       "y": [
-        0.045832,
-        0.366697,
-        0.060249,
-        0.12935,
-        0.167537,
-        1.435391,
-        0.30084,
-        0.05103,
-        0.18867,
-        0.19947,
-        0.08854,
-        0.467594,
-        0.25256,
-        0.06199,
-        14.090315,
-        1.013101,
-        0.09442
+        0.151762,
+        0.413514,
+        0.118773,
+        2.56065,
+        0.363019,
+        1.555783,
+        1.0663,
+        0.182223,
+        0.268989,
+        0.70829,
+        0.37113,
+        0.532153,
+        1.10312,
+        0.145079,
+        13.971688,
+        1.143623,
+        0.185584,
+        0.598216
       ],
       "name": "Initialization",
       "marker": {
@@ -60,23 +62,24 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.03275148509609909,
-          0.1465914932422752,
-          0.06462833820391811,
-          0.00255,
-          0.15168399892869355,
-          0.17193334237139732,
-          0.10625083717317244,
-          0.02113035021006514,
-          0.029465917599830485,
-          0.1223771633108073,
-          0.0534485210272464,
-          0.16756470918424338,
-          0.0166412860079983,
-          0.06987523237886226,
-          2.0168271854264064,
-          0.38214577074592865,
-          0.027064101684704037
+          0.9528800070082246,
+          0.4891391384912877,
+          0.5551701616360499,
+          2.46225,
+          2.127766860992772,
+          0.9853719729173351,
+          2.2572709110782427,
+          0.8205731309097343,
+          0.8084270638585748,
+          1.6642609629802652,
+          0.7882853088190849,
+          0.8426946611264347,
+          2.436902792398581,
+          0.8118546771799763,
+          1.905137710942701,
+          1.1567390980558252,
+          0.8882819472127113,
+          0.21644274426277224
         ]
       }
     },
@@ -99,26 +102,28 @@
         "day 14",
         "day 15",
         "day 16",
-        "day 17"
+        "day 17",
+        "day 18"
       ],
       "y": [
-        0.017688,
-        0.001546,
-        0.44645,
-        756.00604,
-        0.270472,
-        29.35788,
-        22.47494,
-        0.004241,
-        93.819084,
-        1.69002,
-        17.07079,
-        1.686175,
-        135.33989,
-        0.000055,
-        78.13759,
-        0.060567,
-        112.16948
+        0.017522,
+        0.001646,
+        0.404491,
+        763.6594,
+        0.288481,
+        29.402884,
+        24.14387,
+        0.009033,
+        94.517105,
+        2.20945,
+        16.87964,
+        1.66949,
+        138.84447,
+        0.000188,
+        82.66999,
+        0.054995,
+        111.77398,
+        157.7404
       ],
       "name": "Part 1",
       "marker": {
@@ -127,23 +132,24 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.004610667630614898,
-          0.0011635652108927948,
-          0.16966825071297223,
-          6.79145,
-          0.06575673817944444,
-          3.0489557099767786,
-          3.174665430624147,
-          0.0027752151267964723,
-          5.012046514236974,
-          0.37399156086735436,
-          4.325505747181479,
-          0.4528728179908792,
-          4.045939421061566,
-          0.00007794228634059949,
-          4.266352124006996,
-          0.03035634383452656,
-          3.9457509670023527
+          0.00816886258912464,
+          0.0023189402752119355,
+          0.11904224888248696,
+          4.66935,
+          0.10972101138341739,
+          2.554590712973604,
+          3.8300791965832772,
+          0.005869685766716993,
+          4.982708359412976,
+          1.067317607134821,
+          1.5827631801378248,
+          0.4205926857423938,
+          8.56879614322222,
+          0.0013088376522701333,
+          49.943770814043695,
+          0.014420314663695795,
+          2.8641379957327473,
+          6.43160975366167
         ]
       }
     },
@@ -166,26 +172,28 @@
         "day 14",
         "day 15",
         "day 16",
-        "day 17"
+        "day 17",
+        "day 18"
       ],
       "y": [
-        0.034819,
-        0.001313,
-        0.432914,
-        21121.254,
-        2.235519,
-        4.073153,
-        22.60001,
-        0.005411,
-        0.109692,
-        26.05371,
-        38.88754,
-        1.48716,
-        1533.9316,
-        5.733501,
-        77.09692,
-        0.056735,
-        0.10366
+        0.040399,
+        0.00119,
+        0.405276,
+        21129.672,
+        2.148543,
+        4.182797,
+        22.3055,
+        0.010019,
+        0.110779,
+        27.49506,
+        38.66536,
+        1.476626,
+        1553.781,
+        5.895023,
+        77.620636,
+        0.055042,
+        0.110488,
+        156.59486
       ],
       "name": "Part 2",
       "marker": {
@@ -194,23 +202,24 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.012048499450139014,
-          0.0006900224634024607,
-          0.12508032940474664,
-          17.94355,
-          0.5597195334620717,
-          0.520246251203216,
-          3.7415953962046724,
-          0.0012533072249053686,
-          0.020747335636172627,
-          4.256587001683391,
-          3.902901680339898,
-          0.39260897111502685,
-          20.451772092559608,
-          0.6291668981271988,
-          4.008231082951554,
-          0.01959507272249838,
-          0.012232268800185842
+          0.03872232558873497,
+          0.0002930870177950569,
+          0.09707368965893912,
+          45.7798,
+          0.7519203583166235,
+          0.5370840510488091,
+          1.8575722037110696,
+          0.010380035597241466,
+          0.022824304129589603,
+          3.221693357288989,
+          1.9755223517844591,
+          0.4307173376171426,
+          22.34984120733076,
+          0.8093446703172886,
+          4.182899082941758,
+          0.015334159122690717,
+          0.030468450173909416,
+          5.725756761670114
         ]
       }
     }
