--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -33,27 +33,29 @@
         "day 15",
         "day 16",
         "day 17",
-        "day 18"
+        "day 18",
+        "day 19"
       ],
       "y": [
-        0.151762,
-        0.413514,
-        0.118773,
-        2.56065,
-        0.363019,
-        1.555783,
-        1.0663,
-        0.182223,
-        0.268989,
-        0.70829,
-        0.37113,
-        0.532153,
-        1.10312,
-        0.145079,
-        13.971688,
-        1.143623,
-        0.185584,
-        0.598216
+        0.096406,
+        0.431911,
+        0.114429,
+        3.07825,
+        0.384459,
+        1.467784,
+        1.19107,
+        0.159934,
+        0.274285,
+        0.98696,
+        0.34386,
+        0.522121,
+        1.15433,
+        0.137098,
+        14.011611,
+        1.047608,
+        0.134121,
+        0.670012,
+        0.16908
       ],
       "name": "Initialization",
       "marker": {
@@ -62,24 +64,25 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.9528800070082246,
-          0.4891391384912877,
-          0.5551701616360499,
-          2.46225,
-          2.127766860992772,
-          0.9853719729173351,
-          2.2572709110782427,
-          0.8205731309097343,
-          0.8084270638585748,
-          1.6642609629802652,
-          0.7882853088190849,
-          0.8426946611264347,
-          2.436902792398581,
-          0.8118546771799763,
-          1.905137710942701,
-          1.1567390980558252,
-          0.8882819472127113,
-          0.21644274426277224
+          0.7250925346216154,
+          1.219126441095835,
+          0.7432766785383486,
+          2.94245,
+          2.46728273516007,
+          0.5607452030503691,
+          2.7927806097328878,
+          0.6533531530833839,
+          0.8657364135087539,
+          2.5536247015565934,
+          0.7958669552129929,
+          0.9092762702605867,
+          2.5569561795423867,
+          0.8078081462797982,
+          2.202381869608219,
+          1.0982052934383393,
+          0.3960486581961873,
+          1.026448318648335,
+          0.11491716843013493
         ]
       }
     },
@@ -103,27 +106,29 @@
         "day 15",
         "day 16",
         "day 17",
-        "day 18"
+        "day 18",
+        "day 19"
       ],
       "y": [
-        0.017522,
-        0.001646,
-        0.404491,
-        763.6594,
-        0.288481,
-        29.402884,
-        24.14387,
-        0.009033,
-        94.517105,
-        2.20945,
-        16.87964,
-        1.66949,
-        138.84447,
-        0.000188,
-        82.66999,
-        0.054995,
-        111.77398,
-        157.7404
+        0.010789,
+        0.001351,
+        0.350281,
+        755.8184,
+        0.271983,
+        29.44826,
+        22.96052,
+        0.009689,
+        95.9112,
+        2.21212,
+        14.82057,
+        1.643148,
+        140.3701,
+        0.000045,
+        78.522675,
+        0.052929,
+        111.85112,
+        155.67058,
+        1.1394
       ],
       "name": "Part 1",
       "marker": {
@@ -132,24 +137,25 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.00816886258912464,
-          0.0023189402752119355,
-          0.11904224888248696,
-          4.66935,
-          0.10972101138341739,
-          2.554590712973604,
-          3.8300791965832772,
-          0.005869685766716993,
-          4.982708359412976,
-          1.067317607134821,
-          1.5827631801378248,
-          0.4205926857423938,
-          8.56879614322222,
-          0.0013088376522701333,
-          49.943770814043695,
-          0.014420314663695795,
-          2.8641379957327473,
-          6.43160975366167
+          0.003451981894506408,
+          0.0005804300130075979,
+          0.09466663265903136,
+          13.0009,
+          0.06970027124050533,
+          2.416093362065915,
+          2.8988932370130502,
+          0.016220739163182424,
+          5.188807710272565,
+          1.9173684652669136,
+          2.121561652674746,
+          0.39105284079776204,
+          6.211990191235012,
+          0.00005361902647381804,
+          4.093899221503135,
+          0.018080692990037797,
+          2.3566170211154365,
+          6.275851319571786,
+          0.19372032417895652
         ]
       }
     },
@@ -173,27 +179,29 @@
         "day 15",
         "day 16",
         "day 17",
-        "day 18"
+        "day 18",
+        "day 19"
       ],
       "y": [
-        0.040399,
-        0.00119,
-        0.405276,
-        21129.672,
-        2.148543,
-        4.182797,
-        22.3055,
-        0.010019,
-        0.110779,
-        27.49506,
-        38.66536,
-        1.476626,
-        1553.781,
-        5.895023,
-        77.620636,
-        0.055042,
-        0.110488,
-        156.59486
+        0.026211,
+        0.00113,
+        0.354389,
+        20984.514,
+        2.066725,
+        4.207497,
+        22.0102,
+        0.00999,
+        0.113685,
+        25.05286,
+        39.73404,
+        1.43393,
+        1568.5205,
+        5.999378,
+        78.7295,
+        0.053705,
+        0.110805,
+        155.27367,
+        32.49564
       ],
       "name": "Part 2",
       "marker": {
@@ -202,24 +210,25 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.03872232558873497,
-          0.0002930870177950569,
-          0.09707368965893912,
-          45.7798,
-          0.7519203583166235,
-          0.5370840510488091,
-          1.8575722037110696,
-          0.010380035597241466,
-          0.022824304129589603,
-          3.221693357288989,
-          1.9755223517844591,
-          0.4307173376171426,
-          22.34984120733076,
-          0.8093446703172886,
-          4.182899082941758,
-          0.015334159122690717,
-          0.030468450173909416,
-          5.725756761670114
+          0.007588832518905664,
+          0.0003067572330035594,
+          0.05259320088186307,
+          136.53235,
+          0.4372111932178772,
+          0.39332642358605874,
+          1.4656784128859919,
+          0.012424801809284526,
+          0.03170731579620072,
+          4.241743418737159,
+          2.652752923360938,
+          0.3225000612403043,
+          16.312376598534012,
+          1.048224425166672,
+          3.7686037001780863,
+          0.0183342214178841,
+          0.03230151505734677,
+          8.977340245451321,
+          4.00682964878718
         ]
       }
     }
