Finished day 20 of 2015 in Rust

--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -34,28 +34,30 @@
         "day 16",
         "day 17",
         "day 18",
-        "day 19"
+        "day 19",
+        "day 20"
       ],
       "y": [
-        0.096406,
-        0.431911,
-        0.114429,
-        3.07825,
-        0.384459,
-        1.467784,
-        1.19107,
-        0.159934,
-        0.274285,
-        0.98696,
-        0.34386,
-        0.522121,
-        1.15433,
-        0.137098,
-        14.011611,
-        1.047608,
-        0.134121,
-        0.670012,
-        0.16908
+        0.03574,
+        0.256355,
+        0.050032,
+        0.1272,
+        0.132584,
+        1.473364,
+        0.2802,
+        0.051198,
+        0.200145,
+        0.13077,
+        0.0993,
+        0.427232,
+        0.25397,
+        0.060736,
+        14.160483,
+        0.937614,
+        0.08973,
+        0.586431,
+        0.14501,
+        0.12929
       ],
       "name": "Initialization",
       "marker": {
@@ -64,25 +66,26 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.7250925346216154,
-          1.219126441095835,
-          0.7432766785383486,
-          2.94245,
-          2.46728273516007,
-          0.5607452030503691,
-          2.7927806097328878,
-          0.6533531530833839,
-          0.8657364135087539,
-          2.5536247015565934,
-          0.7958669552129929,
-          0.9092762702605867,
-          2.5569561795423867,
-          0.8078081462797982,
-          2.202381869608219,
-          1.0982052934383393,
-          0.3960486581961873,
-          1.026448318648335,
-          0.11491716843013493
+          0.014300895076882425,
+          0.04927351697413125,
+          0.052293186707256516,
+          0.0345,
+          0.0804742278248138,
+          0.24814133695134294,
+          0.07529003918182006,
+          0.01864935376896478,
+          0.07490081625055897,
+          0.03132475219375247,
+          0.04515307298512472,
+          0.10556569791366882,
+          0.02730487319142867,
+          0.07273742024570298,
+          2.021772755334042,
+          0.25514655436434946,
+          0.022156757434245652,
+          0.11674630589016523,
+          0.04182627045291033,
+          0.015917000345542498
         ]
       }
     },
@@ -107,28 +110,30 @@
         "day 16",
         "day 17",
         "day 18",
-        "day 19"
+        "day 19",
+        "day 20"
       ],
       "y": [
-        0.010789,
-        0.001351,
-        0.350281,
-        755.8184,
-        0.271983,
-        29.44826,
-        22.96052,
-        0.009689,
-        95.9112,
-        2.21212,
-        14.82057,
-        1.643148,
-        140.3701,
-        0.000045,
-        78.522675,
-        0.052929,
-        111.85112,
-        155.67058,
-        1.1394
+        0.019316,
+        0.001091,
+        0.360554,
+        771.3475,
+        0.267821,
+        29.354969,
+        23.31582,
+        0.003876,
+        95.31754,
+        1.75911,
+        16.07941,
+        1.650838,
+        136.57047,
+        0.000052,
+        78.470276,
+        0.055807,
+        113.41586,
+        156.2365,
+        1.24063,
+        800.82764
       ],
       "name": "Part 1",
       "marker": {
@@ -137,25 +142,26 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.003451981894506408,
-          0.0005804300130075979,
-          0.09466663265903136,
-          13.0009,
-          0.06970027124050533,
-          2.416093362065915,
-          2.8988932370130502,
-          0.016220739163182424,
-          5.188807710272565,
-          1.9173684652669136,
-          2.121561652674746,
-          0.39105284079776204,
-          6.211990191235012,
-          0.00005361902647381804,
-          4.093899221503135,
-          0.018080692990037797,
-          2.3566170211154365,
-          6.275851319571786,
-          0.19372032417895652
+          0.005914181600187802,
+          0.0001855235834065309,
+          0.08021556135813043,
+          3.90175,
+          0.08572868282552805,
+          2.4880974378305623,
+          2.0116472736541064,
+          0.0023118875405174835,
+          5.089481313617722,
+          0.28935925922631195,
+          2.106724378484286,
+          0.45404067015632005,
+          6.58037162051658,
+          0.00005192301994298865,
+          4.181301696812961,
+          0.033162919820184725,
+          2.7492925072541827,
+          8.713108690329712,
+          0.20527311587248828,
+          13.839420094805273
         ]
       }
     },
@@ -180,28 +186,30 @@
         "day 16",
         "day 17",
         "day 18",
-        "day 19"
+        "day 19",
+        "day 20"
       ],
       "y": [
-        0.026211,
-        0.00113,
-        0.354389,
-        20984.514,
-        2.066725,
-        4.207497,
-        22.0102,
-        0.00999,
-        0.113685,
-        25.05286,
-        39.73404,
-        1.43393,
-        1568.5205,
-        5.999378,
-        78.7295,
-        0.053705,
-        0.110805,
-        155.27367,
-        32.49564
+        0.040203,
+        0.001033,
+        0.365544,
+        21324.062,
+        2.14877,
+        4.28626,
+        22.50188,
+        0.005514,
+        0.113765,
+        24.86318,
+        37.84386,
+        1.446831,
+        1566.6249,
+        5.707544,
+        77.01758,
+        0.057682,
+        0.107104,
+        155.60913,
+        33.99549,
+        877.268
       ],
       "name": "Part 2",
       "marker": {
@@ -210,25 +218,26 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.007588832518905664,
-          0.0003067572330035594,
-          0.05259320088186307,
-          136.53235,
-          0.4372111932178772,
-          0.39332642358605874,
-          1.4656784128859919,
-          0.012424801809284526,
-          0.03170731579620072,
-          4.241743418737159,
-          2.652752923360938,
-          0.3225000612403043,
-          16.312376598534012,
-          1.048224425166672,
-          3.7686037001780863,
-          0.0183342214178841,
-          0.03230151505734677,
-          8.977340245451321,
-          4.00682964878718
+          0.009167294639096107,
+          0.00013860375175297373,
+          0.06989290424642543,
+          87.70955,
+          0.5629777220281456,
+          0.5999665664018288,
+          2.4751161588095214,
+          0.0012681498334187473,
+          0.02630259065187306,
+          1.790491024719197,
+          2.7766916178070624,
+          0.3916689111213701,
+          24.329948047655176,
+          0.4510099824438472,
+          4.075045835464796,
+          0.03275912507989187,
+          0.024867705644067793,
+          6.534078558393597,
+          4.654651305189251,
+          9.33652124945903
         ]
       }
     }
