Finished day 21 of 2015 in Rust

--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -35,29 +35,31 @@
         "day 17",
         "day 18",
         "day 19",
-        "day 20"
+        "day 20",
+        "day 21"
       ],
       "y": [
-        0.03574,
-        0.256355,
-        0.050032,
-        0.1272,
-        0.132584,
-        1.473364,
-        0.2802,
-        0.051198,
-        0.200145,
-        0.13077,
-        0.0993,
-        0.427232,
-        0.25397,
-        0.060736,
-        14.160483,
-        0.937614,
-        0.08973,
-        0.586431,
-        0.14501,
-        0.12929
+        0.031983,
+        0.278662,
+        0.043979,
+        0.12175,
+        0.13874,
+        1.468946,
+        0.32197,
+        0.051662,
+        0.189559,
+        0.13449,
+        0.08495,
+        0.44084,
+        0.25313,
+        0.05519,
+        14.110473,
+        0.911343,
+        0.09312,
+        0.583042,
+        0.16431,
+        0.12227,
+        0.084266
       ],
       "name": "Initialization",
       "marker": {
@@ -66,26 +68,27 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.014300895076882425,
-          0.04927351697413125,
-          0.052293186707256516,
-          0.0345,
-          0.0804742278248138,
-          0.24814133695134294,
-          0.07529003918182006,
-          0.01864935376896478,
-          0.07490081625055897,
-          0.03132475219375247,
-          0.04515307298512472,
-          0.10556569791366882,
-          0.02730487319142867,
-          0.07273742024570298,
-          2.021772755334042,
-          0.25514655436434946,
-          0.022156757434245652,
-          0.11674630589016523,
-          0.04182627045291033,
-          0.015917000345542498
+          0.018039773030722937,
+          0.07255144902756937,
+          0.036661083712841956,
+          0.01015,
+          0.061044513266959546,
+          0.24815898187250882,
+          0.1620760071694759,
+          0.02077818461752614,
+          0.029037124840452056,
+          0.045946413352948454,
+          0.0322607268981962,
+          0.1384307783695519,
+          0.008417725345958967,
+          0.038017357877685294,
+          1.6027451751825685,
+          0.2418805636073305,
+          0.02620129386118174,
+          0.11018898146366539,
+          0.06884648792785295,
+          0.019522809736305886,
+          0.04549124579520765
         ]
       }
     },
@@ -111,29 +114,31 @@
         "day 17",
         "day 18",
         "day 19",
-        "day 20"
+        "day 20",
+        "day 21"
       ],
       "y": [
-        0.019316,
-        0.001091,
-        0.360554,
-        771.3475,
-        0.267821,
-        29.354969,
-        23.31582,
-        0.003876,
-        95.31754,
-        1.75911,
-        16.07941,
-        1.650838,
-        136.57047,
-        0.000052,
-        78.470276,
-        0.055807,
-        113.41586,
-        156.2365,
-        1.24063,
-        800.82764
+        0.015323,
+        0.001245,
+        0.461377,
+        773.04987,
+        0.264517,
+        29.258133,
+        24.52321,
+        0.00464,
+        94.29334,
+        1.85862,
+        14.86295,
+        1.652811,
+        134.02907,
+        0.00006,
+        77.04231,
+        0.051286,
+        113.91902,
+        152.7934,
+        1.2851,
+        808.5914,
+        0.078692
       ],
       "name": "Part 1",
       "marker": {
@@ -142,26 +147,27 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.005914181600187802,
-          0.0001855235834065309,
-          0.08021556135813043,
-          3.90175,
-          0.08572868282552805,
-          2.4880974378305623,
-          2.0116472736541064,
-          0.0023118875405174835,
-          5.089481313617722,
-          0.28935925922631195,
-          2.106724378484286,
-          0.45404067015632005,
-          6.58037162051658,
-          0.00005192301994298865,
-          4.181301696812961,
-          0.033162919820184725,
-          2.7492925072541827,
-          8.713108690329712,
-          0.20527311587248828,
-          13.839420094805273
+          0.00563937682727444,
+          0.0005233306793987908,
+          0.10377305127536743,
+          8.57825,
+          0.08699871729514182,
+          2.1633819667851086,
+          4.627647729127618,
+          0.002596112478302895,
+          4.717034530450668,
+          0.5648952625044752,
+          1.55749317317926,
+          0.35325601053485317,
+          7.213771175196785,
+          0.00005291502622129181,
+          5.132163356377502,
+          0.01568464229748325,
+          2.81137576318499,
+          5.488832136181528,
+          0.41021230844527323,
+          20.560623889583216,
+          0.04833720447026285
         ]
       }
     },
@@ -187,29 +193,31 @@
         "day 17",
         "day 18",
         "day 19",
-        "day 20"
+        "day 20",
+        "day 21"
       ],
       "y": [
-        0.040203,
-        0.001033,
-        0.365544,
-        21324.062,
-        2.14877,
-        4.28626,
-        22.50188,
-        0.005514,
-        0.113765,
-        24.86318,
-        37.84386,
-        1.446831,
-        1566.6249,
-        5.707544,
-        77.01758,
-        0.057682,
-        0.107104,
-        155.60913,
-        33.99549,
-        877.268
+        0.038371,
+        0.001175,
+        0.474159,
+        21486.133,
+        2.101219,
+        4.114482,
+        23.61379,
+        0.005759,
+        0.109746,
+        25.44361,
+        37.81531,
+        1.477056,
+        1533.7021,
+        5.706909,
+        75.97242,
+        0.050574,
+        0.108237,
+        153.26155,
+        29.9659,
+        877.54535,
+        0.072855
       ],
       "name": "Part 2",
       "marker": {
@@ -218,26 +226,27 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.009167294639096107,
-          0.00013860375175297373,
-          0.06989290424642543,
-          87.70955,
-          0.5629777220281456,
-          0.5999665664018288,
-          2.4751161588095214,
-          0.0012681498334187473,
-          0.02630259065187306,
-          1.790491024719197,
-          2.7766916178070624,
-          0.3916689111213701,
-          24.329948047655176,
-          0.4510099824438472,
-          4.075045835464796,
-          0.03275912507989187,
-          0.024867705644067793,
-          6.534078558393597,
-          4.654651305189251,
-          9.33652124945903
+          0.034758516352111565,
+          0.0008468028105763466,
+          0.11027297320286583,
+          173.6155,
+          0.5876299406420677,
+          0.6089375581092032,
+          3.148296867021914,
+          0.001360742076956542,
+          0.014177280557286006,
+          3.953184303431855,
+          3.0224349757935243,
+          0.3687925618338852,
+          23.594862015169742,
+          0.3728427690313972,
+          4.074018120536409,
+          0.00886227532860496,
+          0.026366587397689527,
+          6.3262820331928795,
+          3.4922825011731224,
+          8.601670180121998,
+          0.04127236938921729
         ]
       }
     }
